--- a/ClosetInventory/Views/Dresses/Edit.cshtml
+++ b/ClosetInventory/Views/Dresses/Edit.cshtml
@@ -91,6 +91,7 @@
         @Html.HiddenFor(model => model.LargeFile)
         @Html.HiddenFor(model => model.SmallFile)
         @Html.HiddenFor(model => model.UserId)
+        @Html.HiddenFor(model => model.lastWorn)
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
