--- a/ClosetInventory/Views/Home/Index.cshtml
+++ b/ClosetInventory/Views/Home/Index.cshtml
@@ -1,5 +1,16 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿
+<div class="row homeheader">
+    <img src="Content\Imagess\dresses-53319_1280.jpg" style="width: 100%; height: auto; margin-top: 100px;"/>
 
+</div>
+<div class="row">
+    <h1 class="closet" style="color: white">Super AWESOME home page!</h1>
+    <div class="col-sm-3">
+
+    </div>
+    <div class="col-sm-9">
+
+    </div>
+</div>
+<hr />
 
