--- a/ClosetInventory/Views/Pants/Details.cshtml
+++ b/ClosetInventory/Views/Pants/Details.cshtml
@@ -9,54 +9,10 @@
 <div>
     <h4>Pants</h4>
     <hr />
+    <img src="@Model.LargeFile" style="max-width: 300px; float: right;">  
+
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.isCapri)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isCapri)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsHighWaist)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsHighWaist)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsSkinny)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsSkinny)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SmallFile)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SmallFile)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LargeFile)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LargeFile)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsFavorite)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsFavorite)
-        </dd>
+      
 
         <dt>
             @Html.DisplayNameFor(model => model.DressinessRating)
@@ -90,17 +46,9 @@
             @Html.DisplayFor(model => model.ColorType)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsTightFit)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsTightFit)
-        </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) 
 </p>
