--- a/ClosetInventory/Content/Site.css
+++ b/ClosetInventory/Content/Site.css
@@ -7,6 +7,8 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    margin-top: 100px;
+    transition: .65s;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -23,26 +25,62 @@ textarea {
     max-width: 280px;
 }
 
+.navbar-right{
+    font-size: 2vh;
+}
 .navbar-fixed-top{
     background-color: rgb(245, 245, 245);
     border-bottom-color: black;
     border-bottom-style: solid;
-    height: 50px;
+    border-bottom-width: medium;
+    height: 150px;
+    padding: 0;
+    font-size: 4vh; 
+    
+}
+.navbar-nav > li {
+    line-height: 150px;
+}
+.navbar-nav > li > a {
+
+    line-height: 150px;
+    color: rgb(0, 180, 180);
+}
+.navbar-brand {
+    float: left;
+    padding: 10px 15px;
+    font-size: 4vh;
+    line-height: 150px;
+    color: rgb(0, 0, 0);
+
 }
 
 div.img {
 height: 100%;
-width: 100%;
-    
- 
+padding: 10px;
+margin: 10px;
+border: 1px solid #ccc;
+position: relative;
+
+}
+.outfit{
+    max-width: 160px;
+    height: auto;
+}
+
+/*.container > .navbar-header, .container > .navbar-collapse {
+  margin: 0 auto;
+}*/
+div.boxgroup button {
+    margin: 5px;
 }
 div.boxgroup{
     margin: 20px;
-    border: 1px solid #ccc;
     float: left;
-    width: 180px;
+    width: 200px;
     height: 250px;
     position: relative;
+   
 }
 div.img:hover {
     border: 1px solid #777;
@@ -51,19 +89,17 @@ div.img:hover {
 div.img img {
     width: 100%;
     height: auto;
-    max-height: 180px;
+    max-height: 250px;
     overflow: hidden;
     position: relative;
-    margin: 0 auto;
+    bottom: 0;
+    margin: auto;
+    display: inline-flex;
+     vertical-align:middle; 
     
 }
 
-div.desc {
-    height: 50px;
-    text-align: center;
-    position: relative;
-    display: inline-block;
-}
+
 .galley {
     width: 100%;
     padding: 25%;
@@ -73,4 +109,53 @@ div.desc {
     max-height: 200px;
 
 }
+
+.secondary-nav {
+    margin-top: 0px;
+    line-height: 0px;
+    margin-right: 500px;
+    float: right !important;
+    font-size: 3vh;
+    transition: .75s;
+  
+}
+.navbars:hover > .navbar > .secondary-nav {
+    margin-top: 120px;
+    line-height: 120px;
+}
+.navbars:hover + .body-content {
+    margin-top: 150px;
+    
+}
+
+.closet {
+    margin-bottom: 30px;
+    font-size: 15vh;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+.top-border {
+   font-size: 5vh;
+}
+.navbar-nav > li > a {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.navbar-nav > li > a {
+    padding-top: 0; 
+    padding-bottom: 0;
+    
+}
+.nav > li > a {
+    position: relative;
+    display: block;
+    padding-right: 15px;
+    padding-left: 15px; 
+}
+
+.homeheader {
+    height: 400px;
+}
+
+
 
