--- a/ClosetInventory/Views/Home/HomePants.cshtml
+++ b/ClosetInventory/Views/Home/HomePants.cshtml
@@ -3,75 +3,80 @@
     ViewBag.Title = "HomePants";
 }
 <center>
-    <h2>Your Closet!</h2>
 
-    @Html.Partial("_PartialUserHomePage", Model)
-    @using (Html.BeginForm())
-    {
-
-        <div class="form-horizontal">
-
-            <hr />
-
-            <div class="form-group">
-                @Html.HiddenFor(model => Model.Outfit)
+    <h1 class="closet">Your Closet</h1>
+    <hr/>
+    <div class="row">
+        <div class="col-sm-6">
+        @Html.Partial("_PartialUserHomePage", Model)
             </div>
+        <div class="col-sm-6">
+            
+            @Html.Partial("_PartialButtonsList", Model)
+            <h2>Your Pants</h2>
+            <div class="container gallery">
 
+                @foreach (var item in Model.Pants)
+            {
+                    <div class="col-sm-2" style="margin-left: 50px; margin-right:50px; margin-top: 5px; padding: 10px;">
+                        <div class="boxgroup">
+                            <div class="img">
+                                
+                                    <a href="~/Pants/Details/@item.Id">
+                                        <img src="@item.LargeFile" id="pantsImage" />
+                                    </a>
+                                                     
+                            </div>
 
+                            @*<img src="img_fjords.jpg" alt="Trolltunga Norway" width="300" height="200">*@
+                            <div class="desc">
+                                <button id="move" class="btn btn-primary" onclick="MovePantsToOutfit('@item.Id')">Add to Outfit</button>
+                            </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Wear Outfit" class="btn btn-default" />
-                </div>
+                        </div>
+                    </div>
+
+                }
             </div>
         </div>
-    }
-
-    <div class="container gallery">
-        <center>
-            @foreach (var item in Model.Pants)
-            {
-                <div class="col-sm-2" style="margin-left: 50px; margin-right:50px; margin-top: 5px; padding: 10px;">
-                    <div class="boxgroup">
-                        <div class="img">
-                            <img src="@item.LargeFile" id="pantsImage" />
-                        </div>
-
-                        @*<img src="img_fjords.jpg" alt="Trolltunga Norway" width="300" height="200">*@
-                        <div class="desc">
-                            @Html.ActionLink("Edit", "Edit", "Pants", new { id = item.Id }, null) |
-                            @Html.ActionLink("Details", "Details", "Pants", new { id = item.Id }, null) |
-                            @Html.ActionLink("Delete", "Delete", "Pants", new { id = item.Id }, null)
-                            <button id="move" type="button" class="btn btn-primary" onclick="MovePantsToOutfit(@item.SmallFile)">Add to Outfit</button>
-                        </div>
-
-                    </div>
-                </div>
-
-            }
-        </center>
-    </div>
-
-    <form action="" method="post" id="postTo">
-        @Html.HiddenFor(model => model.Outfit.Id)
-        @Html.HiddenFor(model => model.Outfit.UserId)
-
-        <div id="itemType"></div>
-    </form>
+        </div>
 </center>
+               
+
+                <form action="" method="post" id="postTo">
+                    @Html.HiddenFor(model => model.Outfit.Id)
+                    @Html.HiddenFor(model => model.Outfit.UserId)
+
+                    <div id="itemType"></div>
+                </form>
+          
+
 <script type="text/javascript">
-    function MovePantsToOutfit(smallFile) {
 
-        $('#pants')
-            .attr("src", smallFile);               
-            location.reload();
-    };
 
-      
+    function MovePantsToOutfit(id) {
+        var outfitId =  @Model.Outfit.Id;
+        var clothingType = "pants";
+        var pantsId = id;
+        $.ajax({
+            url: "http://localhost:6001/Home/UpdateOutfit",
+            type: "POST",
+            dataType: 'json',
+            data: {'outfitId' : outfitId, 'Id': pantsId, 'clothingType': clothingType },
+            success: function (){
+                location.reload();
+        }
+        });
+
+     
+    
+    }
+        
     
 
     function RenderPage(item) {
         var path = "Home" + item;
+       
         $('#postTo').attr("action", path);
         $('#postTo').submit();
 
