--- a/ClosetInventory/Views/Home/UserHomePage.cshtml
+++ b/ClosetInventory/Views/Home/UserHomePage.cshtml
@@ -3,53 +3,55 @@
 @{
     ViewBag.Title = "UserHomePage";
 }
+<center>
+    <h1 class="closet">Your Closet</h1>
+   
+    @Html.Partial("_PartialButtonsList", Model)
+</center>
+<hr />
+<div class="row">
+    <div class="col-sm-6">
+        @Html.Partial("_PartialUserHomePage", Model)
+    </div>
 
-
-@*@using (Html.BeginForm())
-{
-
-    <div class="form-horizontal">
-        <h4>Outfit</h4>
-        <hr />
-
-        <div class="form-group">
-        
-        </div>
-
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Wear Outfit" class="btn btn-default" />
+    <div class="col-sm-6">
+        <h1 style="font-size: 10vh; opacity: .7; text-align: center; color: rgb(0, 180, 180)">&#8689;</h1>
+        <div class="row">
+            <div class="col-sm-4">
+                <h1 style="font-size: 12vh; opacity: .7; float: right; color: rgb(0, 180, 180)">&#10100;</h1>
             </div>
+            <div class="col-sm-6">
+                <h2 style="text-align: center">Check Out Your <br />Virtual Closet Here </h2>
+            </div>
+            <div class="col-sm-2">
+                <h1 style="font-size: 12vh; opacity: .7; float:left; color: rgb(0, 180, 180)">&#10101;</h1>
+            </div>
+</div>
         </div>
     </div>
-}*@
-@Html.Partial("_PartialUserHomePage", Model)
+        <form action="" method="post" id="postTo">
 
-<form action="" method="post" id="postTo">
-    
 
-    @Html.HiddenFor(model => model.Outfit.Id)
-    @Html.HiddenFor(model => model.Outfit.UserId)
+            @Html.HiddenFor(model => model.Outfit.Id)
+            @Html.HiddenFor(model => model.Outfit.UserId)
 
-</form>
+        </form>
 
 
 
 
-<script type="text/javascript">
+        <script type="text/javascript">
 
-    function RenderPage(item) {
-        var path = "Home" + item;
-        $('#postTo').attr("action", path);
-        $('#postTo').submit();
-    
-    }
-    function WearOutfit() {
-        var path = "~/Outfits/Create";
-        $('#postTo').attr("action", path)
-    }
+            function RenderPage(item) {
+                var path = "Home" + item;
+                $('#postTo').attr("action", path);
+                $('#postTo').submit();
 
-</script>
+            }
+            function WearOutfit() {
+                var path = "~/Outfits/Create";
+                $('#postTo').attr("action", path)
+            }
+
+        </script>
 
