--- a/ClosetInventory/Views/Shared/_LoginPartial.cshtml
+++ b/ClosetInventory/Views/Shared/_LoginPartial.cshtml
@@ -5,8 +5,8 @@
     {
     @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+    <ul class="nav navbar-nav navbar-right" style="float:right; z-index: -1;">
+        <li ><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
 }
