--- a/ClosetInventory/Views/Shared/_PartialUserHomePage.cshtml
+++ b/ClosetInventory/Views/Shared/_PartialUserHomePage.cshtml
@@ -2,32 +2,32 @@
 @Scripts.Render("~/bundles/jquery")
 
 <center>
-    <h2>Today's Outfit Suggestion</h2>
 
-    <h4>Dressiness Setting: @Model.Dressiness</h4>
-    <a href="ChoicePage"><h5>To Change This Click Here</h5></a>
-    <br />
+
+   
     <script src="/Scripts/jquery-1.10.2.js"></script>
     <div class="outfitImages" >
-        @using (Html.BeginForm())
-        {
+        
+       
 
 
                 @*<div class="form-group">
                     @Html.HiddenFor(Model.Outfit.Cover.LargeFile)
                 </div>*@
+            
 
-
-
-                <div class="form-group">
-                        <input type="submit" value="Wear Outfit" class="btn btn-default" /> 
-                </div>
 
 
         <div class="outfitCover">
             @if (Model.Outfit.Cover != null)
             {
                 <img id="outfit" src="@Model.Outfit.Cover.LargeFile" />
+            }
+        </div>
+        <div id="outfitDress">
+            @if (Model.Outfit.Dress != null && Model.Outfit.Shirt == null && Model.Outfit.Pants == null)
+            {
+                <img id="outfit" src="@Model.Outfit.Dress.LargeFile" />
             }
         </div>
         <div id="outfitShirt">
@@ -48,13 +48,8 @@
                 <img class="outfit" id="shoes" src="@Model.Outfit.Shoe.LargeFile"/>
             }
         </div>
-        <div id="outfitDress">
-            @if (Model.Outfit.Dress != null && Model.Outfit.Shirt == null && Model.Outfit.Pants == null)
-            {
-                <img id="outfit" src="@Model.Outfit.Shoe.LargeFile" />
-            }
-        </div>
-        }
+        
+        
     </div>
         
 </center>
