--- a/ClosetInventory/Content/Site.css
+++ b/ClosetInventory/Content/Site.css
@@ -1,12 +1,13 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 65px;
+    padding-right: 65px;
     margin-top: 100px;
     transition: .65s;
 }
@@ -27,30 +28,38 @@ textarea {
 
 .navbar-right{
     font-size: 2vh;
+    float: right;
 }
 .navbar-fixed-top{
     background-color: rgb(245, 245, 245);
     border-bottom-color: black;
     border-bottom-style: solid;
     border-bottom-width: medium;
-    height: 150px;
+    height: 120px;
     padding: 0;
     font-size: 4vh; 
     
 }
 .navbar-nav > li {
-    line-height: 150px;
+    line-height: 120px;
+}
+.navbar > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 0px;
+    margin-left: 65px;
+    width: 100%;
 }
 .navbar-nav > li > a {
 
-    line-height: 150px;
+    line-height: 120px;
     color: rgb(0, 180, 180);
 }
 .navbar-brand {
     float: left;
     padding: 10px 15px;
     font-size: 4vh;
-    line-height: 150px;
+    line-height: 120px;
     color: rgb(0, 0, 0);
 
 }
@@ -157,5 +166,93 @@ div.img img {
     height: 400px;
 }
 
+.hometitle {
+background: url(/Content/Imagess/hangers.jpg) no-repeat center center fixed; 
+background-size: cover; 
+height: 500px;
+position: relative;
+}
+
+.hometext {
+    position: absolute;
+    font-size: 4vh;
+    color: white;
+}
+
+.navbar {
+  position: relative;
+  z-index: 1000;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+
+}
+
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  position: fixed;
+  right: 0;
+  left: 0;
+  border-width: 0 0 1px;
+}
+
+.navbar-header:before,
+.navbar-header:after {
+  display: table;
+  content: " ";
+}
+
+.navbar-header:after {
+  clear: both;
+}
+
+.navbar-header:before,
+.navbar-header:after {
+  display: table;
+  content: " ";
+}
+
+.navbar-header:after {
+  clear: both;
+}
+
+@media (min-width: 768px) {
+  .navbar-header {
+    float: left;
+  }
+}
+
+.navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+}
+
+.navbar-toggle .icon-bar + .icon-bar {
+  margin-top: 4px;
+}
+
+@media (min-width: 768px) {
+  .navbar-toggle {
+    display: none;
+  }
+}
+.greybox {
+    height: 300px;
+    background-color: rgb(245, 245, 245);
+}
 
 
