--- a/ClosetInventory/Views/Home/ChoicePage.cshtml
+++ b/ClosetInventory/Views/Home/ChoicePage.cshtml
@@ -1,46 +1,60 @@
-﻿@model ClosetInventory.Models.ChoiceViewModel
+﻿@model ClosetInventory.Models.TotalViewModel
 @{
     ViewBag.Title = "ChoicePage";
 }
 
 
 <center>
-<h1>
-    Change Your Dressiness Setting
-</h1>
-<h2>
-    What Type of Outfit Would You Like?
-</h2>
+    <h1>
+        First, What's the Occasion?
+    </h1>
+    <h2>
+        What Type of Outfit Would You Like?
+    </h2>
     <br />
     <br />
+    <form action="" method="post">
+        <div class="buttons">
+            <input type="submit" class="btn btn-primary" name="Dressiness" id="dressy" value="Dressy"/>
+            <input type="submit" class="btn btn-primary" name="Dressiness" id="casual" value="Casual" />
+            <input type="submit" class="btn btn-primary"name="Dressiness" id="business casual" value="Business Casual" />
+            <br />
+        </div>
+        @Html.HiddenFor(Model => Model.User.Id)
+    </form>
 
-    <div class="buttons">
-        <button type="button" class="btn btn-primary" onclick="SubmitDressiness('dressy')">Dressy</button>
-        <button type="button" class="btn btn-primary" onclick="SubmitDressiness('business casual')">Business Casual</button>
-        <button type="button" class="btn btn-primary" onclick="SubmitDressiness('casual')">Casual</button>
-        <br />
+    <div id="msg">
+        It'll be a moment while we put together your outfit...
     </div>
-    <br />
-    <br />
+    <div id="body" style="display:none;">
+        @if (Model.Outfit != null)
+        {
+            <h4>Occasion Type: @Model.Dressiness</h4>
+            <form action="/Home/ChooseOutfit" method="post">
+                @Html.HiddenFor(Model => Model.Outfit.Id)
+                @Html.HiddenFor(Model => Model.Dressiness)
 
-            @Html.ActionLink("Back To Closet", "UserHomePage", "Home")
-</center>
-        <script type="text/javascript">
-            function SubmitDressiness(id) {
-                var choiceId = "" + id;
-                $.ajax({
-                    url: "http://localhost:6001/Home/ChooseDressiness",
-                    type: "POST",
-                    dataType: 'json',
-                    data: {'Id': choiceId },
-                    success: function (){
-                        location.reload();
-                    }
-                });
-                $('#buttons').replaceWith('<div class="buttons"><h4>Changed!</h4></div>'); 
+                <div class="form-group">
+                    <input type="submit" value="Choose Outfit" class="btn btn-default" />
+                </div>
+            </form>
+            @Html.Partial("_PartialUserHomePage", Model)
+
+            @Html.ActionLink("Choose Items from Your Closet", "UserHomePage", "Home")
+        }
+    </div>
+
+    <br />
+    <br />
     
-            }
+  
+</center>
 
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#body').show();
+        $('#msg').hide();
+    });
         </script>
 
 
