--- a/ClosetInventory/Views/Pants/Details.cshtml
+++ b/ClosetInventory/Views/Pants/Details.cshtml
@@ -4,51 +4,57 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<hr />
+<div class="row">
+    <div class="col-sm-2">
+        <img src="@Model.LargeFile" />
+    </div>
 
-<div>
-    <h4>Pants</h4>
-    <hr />
-    <img src="@Model.LargeFile" style="max-width: 300px; float: right;">  
-
-    <dl class="dl-horizontal">
-      
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DressinessRating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DressinessRating)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WarmthRating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WarmthRating)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ColorType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ColorType)
-        </dd>
+    <div class="col-sm-10">
+        <dl class="dl-horizontal">
 
 
-    </dl>
+            <dt>
+                @Html.DisplayNameFor(model => model.DressinessRating)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.DressinessRating)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.WarmthRating)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.WarmthRating)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Color)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Color)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ColorType)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ColorType)
+            </dd>
+
+
+        </dl>
+    </div>
+
+
 </div>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) 
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to Closet", "UserHomePage", "Home")|
+    @Html.ActionLink("Delete This Item", "Delete", "Pants")
 </p>
