--- a/ClosetInventory/Views/Shared/_Layout.cshtml
+++ b/ClosetInventory/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body >
-    <div class="navbars">
+    @*<div class="navbars">
         
             <div class="navbar navbar-fixed-top">
                 <div class="secondary-nav ">
@@ -18,44 +18,57 @@
 
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
-                                <li>@Html.ActionLink("Shop", "Shop", "Home")</li>
+                                <li>@Html.ActionLink("Shop", "SearchAmazon", "Home")</li>
                                 <li>@Html.ActionLink("See Outfit History", "Index", "Outfits")</li>
 
                             </ul>
                         </div>
                     </div>
                 </div>
-        </div>
+        </div>*@
+    
         <div class="top-nav">
-            <div class="navbar navbar-fixed-top">
-                <div class="container" style="height: 100%;">
+            <div class="navbar navbar-fixed-top" style="width: 100%;">
+                <div class="container" style="height: 100%; width: 100%;">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        @Html.ActionLink("Closet Guru", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        
+                        <a class="navbar-brand" href="/"><img src="~/Content/Imagess/Logomakr_6y8xrv.png" style="height: 50px"/></a>
+                        
                     </div>
                     <div class="navbar-collapse collapse">
+
+
                         <ul class="nav navbar-nav">
                             <li class="top-border">&#124;</li>
                             <li>@Html.ActionLink("Add Item", "Upload", "Home")</li>
                             <li class="top-border">&#124;</li>
                             <li>@Html.ActionLink("Your Closet", "UserHomePage", "Home")</li>
                             <li class="top-border">&#124;</li>
-                            <li><a class="more">More</a></li>
+                            <li>@Html.ActionLink("Outfit", "ChoicePage", "Home")</li>
+                            <li class="top-border">&#124;</li>
+                            <li>@Html.ActionLink("Shop", "SearchAmazon", "Home")</li>
+                            <li class="top-border">&#124;</li>
+                            <li>@Html.ActionLink("See Outfit History", "Index", "Outfits")</li>
                             <li class="top-border">&#124;</li>
                         </ul>
                         @Html.Partial("_LoginPartial")
+
+
+ 
                     </div>
                 </div>
             </div>
+            
         </div>
-    </div>
+
     
     
-        <div class="container body-content">
+        <div class="body-content">
             @RenderBody()
 
             <hr />
