--- a/ClosetInventory/Views/Shirts/Delete.cshtml
+++ b/ClosetInventory/Views/Shirts/Delete.cshtml
@@ -8,97 +8,16 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Shirt</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.SleeveLength)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SleeveLength)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsCropped)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsCropped)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SmallFile)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SmallFile)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LargeFile)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LargeFile)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsFavorite)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsFavorite)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DressinessRating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DressinessRating)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WarmthRating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WarmthRating)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ColorType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ColorType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsTightFit)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsTightFit)
-        </dd>
-
-    </dl>
+    <img src="@Model.LargeFile" style="width: 100px" />
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+@Html.ActionLink("Back to Item", "Edit") |
+@Html.ActionLink("Back to Closet", "UserHomePage", "Home")
+
         </div>
     }
 </div>
