--- a/ClosetInventory/Views/Shirts/Details.cshtml
+++ b/ClosetInventory/Views/Shirts/Details.cshtml
@@ -4,95 +4,57 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<hr />
+<div class="row">
+    <div class="col-sm-2">
+        <img src="@Model.LargeFile" />
+    </div>
 
-<div>
-    <h4>Shirt</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.SleeveLength)
-        </dt>
+    <div class="col-sm-10">
+        <dl class="dl-horizontal">
 
-        <dd>
-            @Html.DisplayFor(model => model.SleeveLength)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsCropped)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.DressinessRating)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsCropped)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.DressinessRating)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SmallFile)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.WarmthRating)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SmallFile)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.WarmthRating)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LargeFile)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Color)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LargeFile)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Color)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsFavorite)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.ColorType)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsFavorite)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.ColorType)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DressinessRating)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DressinessRating)
-        </dd>
+        </dl>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WarmthRating)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WarmthRating)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ColorType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ColorType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsTightFit)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsTightFit)
-        </dd>
-
-    </dl>
 </div>
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Closet", "UserHomePage", "Home")|
+    @Html.ActionLink("Delete This Item", "Delete", "Shirts")
 </p>
