--- a/ClosetInventory/Views/Shoes/Edit.cshtml
+++ b/ClosetInventory/Views/Shoes/Edit.cshtml
@@ -18,38 +18,25 @@
         @Html.HiddenFor(model => model.Id)
 
         
-
         <div class="form-group">
-            @Html.LabelFor(model => model.IsFavorite, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Dressiness, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsFavorite)
-                    @Html.ValidationMessageFor(model => model.IsFavorite, "", new { @class = "text-danger" })
-                </div>
+                @Html.DropDownListFor(model => model.DressinessRating, Model.Dressiness, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.ValidationMessageFor(model => model.Dressiness, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.DressinessRating, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.WarmthType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DressinessRating, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DressinessRating, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.WarmthRating, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.WarmthRating, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.WarmthRating, Model.WarmthType, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.ValidationMessageFor(model => model.WarmthRating, "", new { @class = "text-danger" })
             </div>
         </div>
 
-
         <div class="form-group">
-            @Html.LabelFor(model => model.ColorType, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ColorTypes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ColorType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ColorType, Model.ColorTypes, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.ValidationMessageFor(model => model.ColorType, "", new { @class = "text-danger" })
             </div>
         </div>
